feat: new endpoints & docs
